# locust-async-chat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  tech-report.md
.github/workflows/: ci.yml
scripts/: check.sh  local.sh
src/locust_async_chat/: __init__.py  locustfile.py
src/locust_async_chat/config/: __init__.py  config.py
src/locust_async_chat/infrastructure/: __init__.py  registry.py  webhook_server.py
src/locust_async_chat/llm/: __init__.py  client.py  config.py
src/locust_async_chat/models/: __init__.py  callback.py  login.py  message.py  parsers.py
src/locust_async_chat/providers/: __init__.py  base.py
src/locust_async_chat/providers/ai/: README.md  __init__.py  ai_provider.py  conversation_context.py  message_generator.py  prompts.py  topic_manager.py
src/locust_async_chat/providers/langsmith/: __init__.py  provider.py  writer.py
src/locust_async_chat/tools/: plot_res.py
src/locust_async_chat/users/: __init__.py  user.py  user_pool.py
tests/: conftest.py  test_config.py  test_config_ui_flow.py  test_conversation_context.py  test_llm_client.py  test_llm_config.py  test_message_generator.py  test_models.py  test_parsers.py  test_prompts.py  test_registry.py  test_topic_manager.py  test_user_pool.py
