[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locust-async-chat"
version = "0.1.2"
description = "Locust-based load testing for asynchronous conversational AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.52.0",
    "locust>=2.43.4",
    "flask>=3.1.3",
    "gevent>=25.9.1",
    "langsmith>=0.7.30",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest>=9.0.3",
    "ruff>=0.15.10",
    "black>=26.3.1",
    "mypy>=1.20.0",
    "matplotlib>=3.10.8",
]

[tool.ruff]
exclude = ["*.ipynb"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.deptry]
ignore = ["DEP003"]
per_rule_ignores = { DEP002 = ["requests"], DEP004 = ["matplotlib"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:gevent.*",
    "ignore::pytest.PytestCollectionWarning:.*user_pool.*",
]
